--- a/learning-platform/src/Component/Container/Container.scss
+++ b/learning-platform/src/Component/Container/Container.scss
@@ -16,9 +16,6 @@ margin-bottom:120px;
       line-height: normal;
       align-items: center;
       height: 70px;
-    //   max-width: 1100px;
-    //   width: 100%;
-    //   padding: 23px 49px;
   
       .ant-collapse-expand-icon{
          span{
@@ -44,9 +41,11 @@ padding-bottom: 120px;
 .MainContainer{
     padding: 0 80px;
     margin-bottom: 100px;
+    .ant-collapse-item {
     .ant-collapse-content-box{
         padding-bottom: 80px;
    }
+}
 }
 }
 @media screen and (min-width: 425px) and (max-width: 800px) {
