--- a/learning-platform/src/Component/Container/GetHost/GetHost.scss
+++ b/learning-platform/src/Component/Container/GetHost/GetHost.scss
@@ -293,7 +293,7 @@
     }
   }
 }
-@media screen and (min-width: 319px) and (max-width: 425px) {
+@media screen and (min-width: 320px) and (max-width: 425px) {
   .hostContainer {
     display: flex;
     flex-direction: column;
@@ -320,9 +320,9 @@
           padding:14px;
         }
         .avilableButton{
-            width: 124px;
+            width: 54%;
             font-size: 12px;
-            padding: 10px;
+            padding: 6px;
         }
         .availableContainer{
              margin-top: 32px;
@@ -359,10 +359,10 @@
           }
        
               button{
-                  width: 190px;
-                   font-size: 12px;
-                  padding-left: 10px;
-                  padding-right: 10px;
+                width: 79%;
+                font-size: 12px;
+                padding-left: 5px;
+                padding-right: 5px;
               }
 
         }
